Fished path behavior but cannot insert data in path record
